<resources>
    <string name="app_name">GTD</string>
    <string name="logo">Getting Things Done</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="password_reset">Password reset</string>
    <string name="send_email">Send email</string>
    <string name="password_reset_instructions">Enter your email address to receive instructions to reset your password</string>

    <string name="please_insert_an_email_address">Please insert an email address</string>
    <string name="please_insert_a_valid_email_address">Please enter a valid email address</string>
    <string name="please_insert_a_password">Please insert a password</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <!--<string name="please_try_a_different_email_address_or_a_longer_password">Please try a different email address or a longer password</string>-->
    <string name="please_enter_a_password_longer_than_6_characters">Please enter a password longer than 6 characters</string>
    <string name="an_account_already_exists_with_that_email_address">An account with that email address already exists</string>
    <string name="something_went_wrong_please_try_again">Something went wrong. Please try again</string>
    <string name="email_address_does_not_belong_to_any_account">Email address does not belong to any account</string>
    <string name="registration_successful">Registration successful</string>
    <string name="email_sent">Email sent</string>
    <string name="wrong_password">The password you have entered is incorrect. Please try again</string>

    <string name="confirm_password">Confirm password</string>

    <string name="forgotten_password">Forgot your password?</string>

    <string name="verification_email_sent_to">Verification email sent to </string>

    <string name="in_tray">IN Tray</string>
    <string name="projects">Projects</string>
    <string name="calendar">Calendar</string>
    <string name="waiting_for">Waiting For</string>
    <string name="maybe_later">Maybe/Later</string>
    <string name="reference">Reference</string>
    <string name="trash">Trash</string>
    <string name="tags">Tags</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="new_item">New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="view_item">View Item</string>

    <string name="new_tag">New Tag</string>
    <string name="edit_tag">Edit Tag</string>

    <string name="edit_project">Edit Project</string>

    <string name="log_out">Log out</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>

    <string name="in_tray_input_hint">Description</string>
    <string name="title_activity_new_tag">TagActivity</string>

    <string name="title_project_activity">ProjectActivity</string>

    <string name="items">Items</string>

    <string name="new_tag_input_hint">Name</string>

    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="you_have_no_tags">You have no Tags.\nTap the \"+\" button to create one.</string>
    <string name="in_tray_is_empty">Your In Tray is empty.\nTap the \"+\" button to insert an Item.</string>
    <string name="trash_is_empty">Your Trash list is empty.</string>
    <string name="maybe_later_is_empty">Your Maybe/Later list is empty.</string>
    <string name="reference_is_empty">Your Reference list is empty.</string>
    <string name="waiting_for_is_empty">Your Waiting For list is empty.</string>
    <string name="this_item_has_no_tags">This Item has no Tags.</string>
    <string name="projects_is_empty">Your Project list is empty.</string>
    <string name="this_project_has_no_items">This Project has no Items.</string>
    <string name="this_day_has_no_items">You have no Items due this day.</string>

    <string name="item_restored">Item restored to In Tray</string>

    <string name="tag_notifications">Tag notifications</string>


    <string name="time">Time</string>
    <string name="days_of_the_week">Days of the week</string>
    <string name="date">Date</string>
    <string name="place">Place</string>
    <string name="location">Location</string>

    <string name="tag_time_alert_title">Tag time</string>
    <string name="tag_location_alert_title">Tag location</string>

    <string name="remove">Remove</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="move">Move</string>
    <string name="ok">OK</string>


    <string name="clarify">Clarify</string>

    <string name="restore">Restore</string>

    <string name="clarify_item">Clarify item</string>

    <string name="skip">Skip</string>
    <string name="move_item_to">Move Item to</string>
    <string name="move_item_to_project">Move Item to Project</string>
    <string name="move_item_to_new_project">Move Item to new Project</string>
    <string name="is_this_item_actionable">Is this Item actionable?</string>
    <string name="is_this_item_useful_to_remember">Is this Item useful to remember?</string>
    <string name="does_this_item_take_more_than_two_minutes">Does this Item take more than 2 minutes?</string>
    <string name="is_there_a_date_for_this_Item">Is there a date for this Item?</string>
    <string name="do_it_now">Do it now!</string>
    <string name="does_this_item_need_to_wait_for_something_or_someone">Does this Item need to wait for something or someone?</string>
    <string name="is_this_item_part_of_a_project">Is this Item part of a project?</string>
    <string name="pick_a_date_for_this_item">Pick a date for this Item</string>

    <string name="this_item_belongs_in_calendar">This Item belongs in Calendar</string>
    <string name="this_item_belongs_in_trash">This Item belongs in Trash</string>
    <string name="this_item_belongs_in_reference">This Item belongs in Reference</string>
    <string name="this_item_belongs_in_waiting_for">This Item belongs in Waiting For</string>
    <string name="this_item_belongs_in_maybe_later">This Item belongs in Maybe/Later</string>

    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="restore_item_alert_title">Restore Item to In Tray?</string>
    <string name="tag_delete_warning">This tag is used by the following Items</string>
    <string name="tags_delete_warning">One or more tags are being used by the following Items</string>

    <string name="in_tray_notification_channel_name">In Tray Clarification Reminders</string>
    <string name="in_tray_notification_title">Time to Clarify your In Tray Items</string>

    <string name="calendar_notification_channel_name">Calendar notifications</string>
    <!--<string name="calendar_notification_title"></string>-->

    <string name="tags_notification_channel_name">Tag notifications</string>
    <string name="tags_notification_title">This Item is relevant right now</string>

    <string name="notifications">Notifications</string>
    <string name="settings_intray_reminders">In Tray weekly Clarification reminders</string>
    <string name="day_of_the_week">Day of the week</string>
    <string name="settings_calendar_notifications">Calendar notifications</string>
    <string name="account">Account</string>
    <string name="reset_account">Reset account</string>
    <string name="delete_account">Delete account</string>

    <string name="reset_account_confirmation_title">Are you sure you want to reset your account?</string>
    <string name="reset_account_confirmation_message">You will keep your account, but all your data will be lost</string>

    <string name="reset">Reset</string>

    <string name="delete_account_confirmation_title">Are you sure you want to delete your account?</string>
    <string name="delete_account_confirmation_message">Your account will be permanently deleted and you will be logged out</string>

    <string name="enter_password_to_delete_account">Please enter your password to delete your account</string>
    <string name="could_not_delete_account">Something went wrong while deleting your account. Please try again later</string>

    <string name="could_not_connect_to_location">Something went wrong while retrieving your location</string>


    <string name="intro_activity_name">Introduction Activity</string>

    <string name="first_intro_fragment_title">Welcome to GTD</string>
    <string name="first_intro_fragment_description">This application aims at improving your productivity by adopting the Getting Things Done methodology by David Allen.
        Let\'s go through some of GTD concepts and features that you can use.</string>

    <string name="second_intro_fragment_title">Items</string>
    <string name="second_intro_fragment_description">An Item could be anything: something to do or to remember.</string>

    <string name="third_intro_fragment_title">Tags</string>
    <string name="third_intro_fragment_description">Tags help give context to your Items. By setting a Tag\'s time and place, you will be notified of any Item with that Tag
        in the appropriate context.</string>

    <string name="fourth_intro_fragment_title">In Tray</string>
    <string name="fourth_intro_fragment_description">This is where you should enter every Item you can think of. By freeing your mind of the responsibility of remembering things,
        you can focus on getting thing done.</string>

    <string name="fifth_intro_fragment_title">Clarification</string>
    <string name="fifth_intro_fragment_description">Items in the In Tray need to be Clarified eventually. You can answer a few questions to help you place the Item
        in the appropriate list.</string>

    <string name="sixth_intro_fragment_title">That\'s it!</string>
    <string name="sixth_intro_fragment_description">Now you know the basics of Getting Things Done.</string>

</resources>
