<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:padding="30dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/password_reset_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_reset"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:paddingBottom="20dp"/>

    <TextView
        android:id="@+id/password_reset_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/password_reset_instructions"
        android:layout_marginTop="14sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/password_reset_title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_reset_email_layout"
        android:textColorHint="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/password_reset_text_view">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_reset_email_address_edit_text"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:maxLines="1"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/password_reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/send_email"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/password_reset_email_layout"/>

    <ProgressBar
        android:id="@+id/password_reset_progress_bar"
        android:visibility="gone"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_reset_button"
        />



</android.support.constraint.ConstraintLayout>