<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLighterGrey"
    android:padding="@dimen/standard_padding"
    tools:context="com.gettingthingsdone.federico.gettingthingsdone.activities.ItemActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/in_tray_input_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/in_tray_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/in_tray_input_hint"
            android:maxLines="15"
            android:textSize="30dp"
            android:inputType="textCapSentences"
            android:windowSoftInputMode="stateVisible" />

    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tag_title_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/in_tray_input_text_input_layout">

        <TextView
            android:id="@+id/item_tags_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/notification_switch_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag_notifications"
            app:layout_constraintRight_toLeftOf="@id/notification_switch"
            android:paddingRight="10dp"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/this_item_has_no_tags_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_item_has_no_tags"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tag_title_constraintLayout"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tag_title_constraintLayout"
        app:layout_constraintVertical_chainStyle="spread">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/item_tags_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
