<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:paddingTop="60dp"
        android:paddingBottom="40dp"/>

    <LinearLayout
        android:id="@+id/textinputedits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:textColorHint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_marginBottom="20dp"
                android:id="@+id/insert_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/insert_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textinputedits"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/log_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/log_in"
            android:textColor="@color/colorBlack" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/register_text"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_hint"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/log_in_progress_bar"
            android:visibility="invisible"
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>