<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorLighterGrey"
    android:padding="@dimen/standard_padding">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_tag_input_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_tag_input_edit_text"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/new_tag_input_hint"
            android:maxLines="1"
            android:inputType="text"
            android:windowSoftInputMode="stateVisible"
            android:layout_marginBottom="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintTop_toBottomOf="@id/new_tag_input_text_input_layout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_tag_time_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_tag_time_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableLeft="@drawable/ic_time"
                android:hint="@string/time"
                android:maxLines="1"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_tag_location_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_tag_location_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableLeft="@drawable/ic_location"
                android:hint="@string/location"
                android:maxLines="1"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>