<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:id="@+id/textinputedits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email_layout"
            android:textColorHint="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_email_address"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_password"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleTint="@color/colorAccent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textinputedits"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="10dp"/>

        <!--<TextView-->
            <!--android:id="@+id/verification_email_sent_textview"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/verification_email_sent_to"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:gravity="center"-->
            <!--android:textSize="15dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--/>-->

        <ProgressBar
            android:id="@+id/register_progress_bar"
            android:visibility="invisible"
            android:paddingTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>